<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android-v10</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="id_hint">ID</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="tel_hint">Tel</string>
    <string name="save_btn">存</string>
    <string name="read_btn">取</string>

</resources>
