<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/idEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/id_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/name_hint"
        android:ems="10" />

    <EditText
        android:id="@+id/ageEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:hint="@string/age_hint"
        android:ems="10" />

    <EditText
        android:id="@+id/telEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:hint="@string/tel_hint"
        android:ems="10" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/telEt"
        android:layout_below="@+id/telEt"
        android:layout_marginTop="49dp"
        android:onClick="save"
        android:text="@string/save_btn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/telEt"
        android:onClick="read"
        android:text="@string/read_btn" />

</RelativeLayout>